--- a/program.in
+++ b/program.in
@@ -1,1 +1,1 @@
-ab2 ab3 ab4 int 'f' float char true false bool string
+ab2 ab3 ab4 int 'f' float char true false bool string "rrr"  y_5 if else do while switch 
